teams/team-data/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: flask
  name: flask
  namespace: testing
spec:
  selector: 
    matchLabels:
      app: flask
  replicas: 1
  template:
    metadata:
      labels:
        app: flask
    spec:
      containers:
      - name: flask
        image: nikunjv/flask-image:green
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 5000
        resources:
          limits:
            memory: "700Mi"
            cpu: "0.6"
