teams/team-data/templates/deployment-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-svc
  namespace: testing
spec:
  selector:
    app: flask
  ports:
    - name: web
      port: 80
      targetPort: 5000
  type: LoadBalancer
